--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-uglifyjs": "^0.6.2"
   },
   "dependencies": {
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "owl.carousel": "^2.3.4"
   }
 }
